--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/RahmaBilal/team-profile-generator#readme",
   "dependencies": {
+    "inquirer": "^9.1.4",
     "jest": "^29.0.3"
   }
 }
